# 2AMC15_G16

./: .gitignore  README.md  compare.py  compare_final.py  latest_env.py  main.py  pyproject.toml  requirements.txt  stats_agent_size.py  stats_sigma.py  stats_step_size.py  train.py  train_continuous.py  train_dqn.py  train_final.py  train_ppo.py  trainandevaluate.py  training_grid.npy
agents/: __init__.py  continuous_base_agent.py  d_q_n_agent.py  dqn_agent.py  dqn_mlp_agent.py  mc_onpolicy.py  monte_carlo_agent.py  monte_carlo_on_policy_agent.py  null_agent.py  on_policy_monte_carlo.py  p_p_o_agent.py  ppo_agent.py  ppo_new_agent.py  q_learning_agent.py  stable_baselines3_agent.py  stable_baselines3_agent_old.py  value_iteration_agent.py  value_iteration_agent_tjerk.py
evaluation_results/: DQNAgent_eval.csv
experiment-agentsize0.5-dqn/: DQNAgent_curve_run0.csv  DQNAgent_curve_run1.csv  DQNAgent_curve_run2.csv  DQNAgent_curve_run3.csv  DQNAgent_curve_run4.csv  DQNAgent_curve_run5.csv  DQNAgent_curve_run6.csv  DQNAgent_curve_run7.csv  DQNAgent_curve_run8.csv
experiment-agentsize0.5-ppo/: PpoAgent_curve_run1.csv  PpoAgent_curve_run10.csv  PpoAgent_curve_run2.csv  PpoAgent_curve_run3.csv  PpoAgent_curve_run4.csv  PpoAgent_curve_run5.csv  PpoAgent_curve_run6.csv  PpoAgent_curve_run8.csv
experiment-agentsize1.0-dqn/: DQNAgent_curve_run0.csv  DQNAgent_curve_run1.csv  DQNAgent_curve_run2.csv  DQNAgent_curve_run3.csv  DQNAgent_curve_run4.csv  DQNAgent_curve_run5.csv
experiment-agentsize1.0-ppo/: PpoAgent_curve_run2.csv  PpoAgent_curve_run4.csv  PpoAgent_curve_run6.csv
(+253 files in other folders)
