[project]
name = "2amc15"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorcet>=3.1.0",
    "flask>=3.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pygame>=2.6.1",
    "tqdm>=4.67.1",
]
